Date: 10/08/2010
Release Version: post release of Jargon 2.4.1 
================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against iRODS2.2, iRODS2.3, iRODS2.4, and iRODS2.4.1

libraries
---------

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-mockito-all-1.8.4.jar - used for unit testing, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

*Did a periodic mass cleanup/format/import cleanup. This had not been done for a while.

*Bug 115 - copyFrom() for http files results in protocol exception 
Normalized copyFrom and copyTo in the various file implementations, added unit tests.  There may be some subtle contract changes
from this fix, but the code itself was not consistent.

*Bug 116 - Query with Query multiple user AVU on Collection returns no result - added tests, currently ignored as this appears a GenQuery issue.
================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org